<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nandi.disastermanager.MainActivity">


    <com.esri.arcgisruntime.mapping.view.SceneView
        android:id="@+id/sceneView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.esri.arcgisruntime.mapping.view.SceneView>


    <LinearLayout
        android:id="@+id/ll_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include layout="@layout/activity_area_statistics" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_area"
        android:layout_marginTop="10dp">

        <include layout="@layout/activity_data_manage" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:layout_below="@+id/map_control"
        android:src="@drawable/location" />

    <ImageView
        android:id="@+id/iv_search_main"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/iv_location"
        android:layout_margin="10dp"
        android:src="@drawable/search_icon" />

    <Button
        android:id="@+id/btn_util"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/iv_search_main"
        android:layout_margin="10dp"
        android:text="打开工具" />

    <Button
        android:id="@+id/btn_util_detail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/ll_data"
        android:layout_marginBottom="18dp"
        android:layout_toLeftOf="@+id/btn_util"
        android:layout_toStartOf="@+id/btn_util"
        android:text="显示详情"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_util"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_util"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageButton
            android:id="@+id/pointButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/pointButtonDescription"
            android:onClick="pointClick"
            android:src="@drawable/ic_action_point" />

        <ImageButton
            android:id="@+id/polylineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/polylineButtonDescription"
            android:onClick="polylineClick"
            android:src="@drawable/ic_action_polyline" />

        <ImageButton
            android:id="@+id/polygonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/polygonButtonDescription"
            android:onClick="polygonClick"
            android:src="@drawable/ic_action_polygon" />

        <ImageButton
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/undoButtonDescription"
            android:onClick="undoClick"
            android:src="@drawable/ic_action_undo" />

        <ImageButton
            android:id="@+id/redoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/redoButtonDescription"
            android:onClick="redoClick"
            android:src="@drawable/ic_action_redo" />

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bar_background"
            android:contentDescription="@string/clearButtonDescription"
            android:onClick="clearClick"
            android:src="@drawable/ic_action_clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_measure_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="100dp"
        android:layout_marginRight="30dp"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <com.nandi.disastermanager.ui.CircleBar
        android:id="@+id/pie_chart"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-60dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/map_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/iv_enlarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/map_control_selector"
            android:src="@mipmap/enlarge" />

        <ImageView
            android:id="@+id/iv_luopan"
            android:layout_width="50dp"
            android:background="@drawable/map_control_selector"
            android:layout_height="50dp"
            android:src="@mipmap/compass" />

        <ImageButton
            android:id="@+id/iv_narrow"
            android:background="@drawable/map_control_selector"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/narrow" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_scale"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
